--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
       integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
       crossorigin="anonymous"></script>
-
+      <script defer src='scripts.js'></script>
 </head>
 <body>
 
-    <div id="chessBoard" style="width: 400px;"></div>
-    <button id="startBtn">Start Position</button>
-    <button id="clearBtn">Clear Board</button>
+    <div id="chessBoard"></div>
+    <div id="buttonDiv">    
+        <button id="startBtn">Start Position</button>
+        <button id="clearBtn">Clear Board</button>
+    </div>
 
-    <script src='scripts.js'></script>
+
+    
 </body>
 </html>
