--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
       integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
       crossorigin="anonymous"></script>
-      <script defer src='scripts.js'></script>
+      <script defer type="module" src='scripts.js'></script>
 </head>
 <body>
 
