added random move button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="chessBoard"></div>
     <div id="buttonDiv">    
         <button id="startBtn">Start Position</button>
+        <button id="randomMoveButton">Make Random Move</button>
         <button id="clearBtn">Clear Board</button>
     </div>
 
