Enforced legal moves only

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
 </head>
 <body>
 
+    <div class="buttonDiv" id="promotionDiv">
+        <button class="promotionButtons" id="queenButton"><img src="./img/chesspieces/wikipedia/bQ.png" alt=""></button>
+        <button class="promotionButtons" id="rookButton"><img src="./img/chesspieces/wikipedia/bR.png" alt=""></button>
+        <button class="promotionButtons" id="bishopButton"><img src="./img/chesspieces/wikipedia/bB.png" alt=""></button>
+        <button class="promotionButtons" id="knightButton"><img src="./img/chesspieces/wikipedia/bN.png" alt=""></button>
+    </div>
     <div id="chessBoard"></div>
-    <div id="buttonDiv">    
+    <div class="buttonDiv">    
         <button id="startBtn">Start Position</button>
         <button id="clearBtn">Clear Board</button>
         <button id="randomMoveButton">Make Random Move</button>
