Promotion buttons change to correct player colour

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
 
     <div class="buttonDiv" id="promotionDiv">
-        <button class="promotionButtons" id="queenButton"><img src="./img/chesspieces/wikipedia/bQ.png" alt=""></button>
-        <button class="promotionButtons" id="rookButton"><img src="./img/chesspieces/wikipedia/bR.png" alt=""></button>
-        <button class="promotionButtons" id="bishopButton"><img src="./img/chesspieces/wikipedia/bB.png" alt=""></button>
-        <button class="promotionButtons" id="knightButton"><img src="./img/chesspieces/wikipedia/bN.png" alt=""></button>
+        <button class="promotionButtons" id="queenButton"><img id="queenImage" src="./img/chesspieces/wikipedia/bQ.png" alt=""></button>
+        <button class="promotionButtons" id="rookButton"><img id="rookImage" src="./img/chesspieces/wikipedia/bR.png" alt=""></button>
+        <button class="promotionButtons" id="bishopButton"><img id="bishopImage" src="./img/chesspieces/wikipedia/bB.png" alt=""></button>
+        <button class="promotionButtons" id="knightButton"><img id="knightImage" src="./img/chesspieces/wikipedia/bN.png" alt=""></button>
     </div>
     <div id="chessBoard"></div>
     <div class="buttonDiv">    
