Added minimax and alpha-beta pruning

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="buttonDiv">    
         <button id="startBtn">Start Position</button>
         <button id="clearBtn">Clear Board</button>
-        <button id="randomMoveButton">Make Random Move</button>
+        <button id="aiMoveButton">Make AI Move</button>
     </div>
 
 
