Added private compute group

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
         //Specifies one or more compute groups that the DCP Worker will join and retrieve computational workload from
         dcpConfig.worker.computeGroups.push(
-          {joinKey: 'queens', joinHash: 'eh1-13152c353a61c0abf297c093b8ec8a21a193ca2cd8b1d47e38e980a8de231887'}
+          {joinKey: 'insight', joinHash: 'dcp'}
         );
         
         //Instantiate a DCP Browser Worker with paymentAddress (where Compute Credits get deposited) and maxWorkingSandboxes (number of concurrent sandboxes)
