added greedy estimation

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
         <button id="DCPBtn">Distributed Analysis</button>
         <button id="aiMoveButton">Local Analysis</button>
     </div>
+    <div class="buttonDiv">
+        <button id="loadPosition">Load Position (FEN)</button>
+        <input type="text" id="fen" name="fen" placeholder="FEN String Here">
+    </div>
+    <div class="buttonDiv"> <p>Complex Example Position:<br>2rq2kb/pb1r3p/2n1R1pB/1pp2pN1/3p1Q2/P1PP2P1/1P3PBP/4R1K1 w - - 0 1</p> </div>
 
 
     
