--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </select>
           <br />
           <h3 id="analysis">Analysis: None</h3>
-          <h5 id="reccomendedMove">Reccomended Move: None</h5>
+          <h5 id="recommendedMove">Recommended Move: None</h5>
           <h5 id="evaluation">Evaluation: None</h5>
           <h5 id="pV">Principle Variation: None</h5>
           <progress id="progressBar" value="0" max="1"></progress>
